# bi-osy

./: .gitignore  CMakeLists.txt  README.md
cv01_hw/: CMakeLists.txt  main.cpp
hw01/: CMakeLists.txt  Makefile  common.h  fail.txt  obrazok.xopp  osy_pt01_notes.txt  progtest_solver.h  sample_tester.cpp  sample_tester.h  solution.cpp  succ.txt
hw02/: test.cpp
